--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,7 +3,7 @@
     <string name="add_activity">Добавить</string>
     <string name="add_new_feed_activity">Добавить канал</string>
     <string name="settings_activity">Настройки</string>
-    <string name="rss_feed_btn">Получить</string>
+    <string name="rss_feed_btn">Найти</string>
     <string name="text_input_layout_hint">Адрес ленты</string>
 
     <string name="pref_title_auto_back_sync">Автообновление</string>
@@ -21,13 +21,9 @@
         <item>120</item>
     </string-array>
 
-    <!--
-    <string name="pref_sync_frequency_default_value">2 hours</string>
-    -->
-
     <string name="connection_error">Ошибка при подключении</string>
     <string name="feed_added">Канал добавлен!</string>
-    
+
     <string name="unknown_source">Неизвестный источник</string>
     <string name="empty_input_field">Введите ссылку на ресурс</string>
 </resources>
