--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,8 @@
         <item>dark</item>
     </string-array>
 
-    <string name="pref_sync_frequency_default_value" translatable="false">2 hours</string>
-    <string name="pref_theme_default_value">Light</string>
+    <string name="pref_sync_frequency_default_value" translatable="false">120</string>
+    <string name="pref_theme_default_value" translatable="false">light</string>
 
     <string name="connection_error">Connection error or the write error to the database</string>
     <string name="feed_added">Done!</string>
