Added check for matching channels in the database

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,7 +38,7 @@
     </string-array>
 
 
-    <string name="connection_error">Ошибка при подключении</string>
+    <string name="connection_error">Ошибка при подключении или канал уже был добавлен</string>
     <string name="feed_added">Канал добавлен!</string>
 
     <string name="unknown_source">Неизвестный источник</string>
